--- a/Argentino/panel-mayorista.html
+++ b/Argentino/panel-mayorista.html
@@ -6,6 +6,6 @@
     <title>Panel Mayorista - 100% ARgentino</title>
 </head>
 <body>
-    <p>Aca el usuario se hace una cuenta mayorista!</p>
+    <h2>Aca el usuario se hace una cuenta mayorista!</h2>
 </body>
 </html>
