--- a/Argentino/producto.html
+++ b/Argentino/producto.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Panel Mayorista - 100% ARgentino</title>
+    <title>Document</title>
 </head>
 <body>
-    <h2>Aca el usuario se hace una cuenta minorista!</h2>
+    <h2>aca se muestra el producto individual</h2>
 </body>
 </html>
