--- a/Argentino/catalogo.html
+++ b/Argentino/catalogo.html
@@ -6,6 +6,6 @@
     <title>Cataglogo - 100% ARgentino</title>
 </head>
 <body>
-    <p>Aca se muestra el catalogo!</p>
+    <h2>Aca se muestra el catalogo!</h2>
 </body>
 </html>
