cambios de ruta

--- a/Argentino/index.html
+++ b/Argentino/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <div class="logo">
-                <a href="index.html"><img src="/img/logo/Logo-100Argentino-300x300.png" alt="Logo 100% Argentino"></a>
+                <a href="index.html"><img src="./img/logo/Logo-100Argentino-300x300.png" alt="Logo 100% Argentino"></a>
                 <h2>100% Argentino</h2>
             </div>
             <ul class="nav-links">
@@ -82,22 +82,22 @@
             <!-- carrusel lo que se va  a mover -->
              <div class="carrusel-productos-nuevos-funcional">
                 <!-- primera slide -->
-                <img src="/img/productos/producto1.jpg" alt="Cuchillos Mango De Madera Y Alpaca Con Hoja De Tuzar Acero Inoxidable">
-                <img src="/img/productos/producto2.jpg" alt="Kit De Tabla y Cuchillos 10 Cm Gauchasado">
-                <img src="/img/productos/producto3.jpg" alt="Kit De Tabla Picada 4 Tenedor 8 Cm Gauchasado">
-                <img src="/img/productos/producto4.jpg" alt="Bandeja de Alpaca Circular 24cm con manijas de Asta">
-                <img src="/img/productos/producto5.jpg" alt="Mate Imperial Virola de Alpaca Cuero Crudo">
-                <img src="/img/productos/producto6.jpg" alt="Juego De Cubierto 12 Piezas En Madera Y Alpaca">
-                <img src="/img/productos/producto7.jpg" alt="Juego De Cubiertos Madera Linea Fina 12 Piezas">
+                <img src="./img/productos/producto1.jpg" alt="Cuchillos Mango De Madera Y Alpaca Con Hoja De Tuzar Acero Inoxidable">
+                <img src="./img/productos/producto2.jpg" alt="Kit De Tabla y Cuchillos 10 Cm Gauchasado">
+                <img src="./img/productos/producto3.jpg" alt="Kit De Tabla Picada 4 Tenedor 8 Cm Gauchasado">
+                <img src="./img/productos/producto4.jpg" alt="Bandeja de Alpaca Circular 24cm con manijas de Asta">
+                <img src="./img/productos/producto5.jpg" alt="Mate Imperial Virola de Alpaca Cuero Crudo">
+                <img src="./img/productos/producto6.jpg" alt="Juego De Cubierto 12 Piezas En Madera Y Alpaca">
+                <img src="./img/productos/producto7.jpg" alt="Juego De Cubiertos Madera Linea Fina 12 Piezas">
 
                 <!-- Segunda slide                 -->
-                <img src="/img/productos/producto1.jpg" alt="Cuchillos Mango De Madera Y Alpaca Con Hoja De Tuzar Acero Inoxidable">
-                <img src="/img/productos/producto2.jpg" alt="Kit De Tabla y Cuchillos 10 Cm Gauchasado">
-                <img src="/img/productos/producto3.jpg" alt="Kit De Tabla Picada 4 Tenedor 8 Cm Gauchasado">
-                <img src="/img/productos/producto4.jpg" alt="Bandeja de Alpaca Circular 24cm con manijas de Asta">
-                <img src="/img/productos/producto5.jpg" alt="Mate Imperial Virola de Alpaca Cuero Crudo">
-                <img src="/img/productos/producto6.jpg" alt="Juego De Cubierto 12 Piezas En Madera Y Alpaca 3 Virolas Labrada Linea Fina En Caja De Madera Cedro Lustrado">
-                <img src="/img/productos/producto7.jpg" alt="Juego De Cubiertos Madera Linea Fina 12 Piezas En Caja De Madera Cedro Lustrado Estilo POSTAL PORTENA">
+                <img src="./img/productos/producto1.jpg" alt="Cuchillos Mango De Madera Y Alpaca Con Hoja De Tuzar Acero Inoxidable">
+                <img src="./img/productos/producto2.jpg" alt="Kit De Tabla y Cuchillos 10 Cm Gauchasado">
+                <img src="./img/productos/producto3.jpg" alt="Kit De Tabla Picada 4 Tenedor 8 Cm Gauchasado">
+                <img src="./img/productos/producto4.jpg" alt="Bandeja de Alpaca Circular 24cm con manijas de Asta">
+                <img src="./img/productos/producto5.jpg" alt="Mate Imperial Virola de Alpaca Cuero Crudo">
+                <img src="./img/productos/producto6.jpg" alt="Juego De Cubierto 12 Piezas En Madera Y Alpaca 3 Virolas Labrada Linea Fina En Caja De Madera Cedro Lustrado">
+                <img src="./img/productos/producto7.jpg" alt="Juego De Cubiertos Madera Linea Fina 12 Piezas En Caja De Madera Cedro Lustrado Estilo POSTAL PORTENA">
 
             </div>
 
@@ -119,19 +119,19 @@
         <div class="carrusel-tarjetas-animadas-catalogo">
 
             <section class="tarjeta-animado-catalogo">
-                <img src="/img/catalogos/catalogo5.jpg" alt="">
+                <img src="./img/catalogos/catalogo5.jpg" alt="">
             </section>
             <section class="tarjeta-animado-catalogo">
-                <img src="/img/catalogos/catalogo1.jpg" alt="">
+                <img src="./img/catalogos/catalogo1.jpg" alt="">
             </section>
                 <section class="tarjeta-animado-catalogo">
-                <img src="/img/catalogos/catalogo2.jpg" alt="">
+                <img src="./img/catalogos/catalogo2.jpg" alt="">
             </section>
             <section class="tarjeta-animado-catalogo">
-                <img src="/img/catalogos/catalogo3.jpg" alt="">
+                <img src="./img/catalogos/catalogo3.jpg" alt="">
             </section>
             <section class="tarjeta-animado-catalogo">
-                <img src="/img/catalogos/catalogo4.png" alt="">
+                <img src="./img/catalogos/catalogo4.png" alt="">
             </section>
         </div>
         <!-- Flechas del carrusel de cards animadas -->
@@ -216,7 +216,7 @@
     <!-- contenedor de categorias -->
      <div class="container-categorias">
         <div class="categoria">
-            <img src="/img/categorias/categoria1.jpg" alt="">
+            <img src="./img/categorias/categoria1.jpg" alt="">
             <div class="info-cat">
                 <p class="name-categoria">Accesorios</p>
                 <p class="cant-productos-categoria">71 productos</p>
@@ -224,7 +224,7 @@
         </div>
 
         <div class="categoria">
-            <img src="/img/categorias/categoria2.jpg" alt="">
+            <img src="./img/categorias/categoria2.jpg" alt="">
             <div class="info-cat">
                 <p class="name-categoria">Accesorios</p>
                 <p class="cant-productos-categoria">71 productos</p>
@@ -232,7 +232,7 @@
         </div>
 
         <div class="categoria">
-            <img src="/img/categorias/categoria3.jpg" alt="">
+            <img src="./img/categorias/categoria3.jpg" alt="">
             <div class="info-cat">
                 <p class="name-categoria">Accesorios</p>
                 <p class="cant-productos-categoria">71 productos</p>
@@ -240,7 +240,7 @@
         </div>
 
         <div class="categoria">
-            <img src="/img/categorias/categoria4.jpg" alt="">
+            <img src="./img/categorias/categoria4.jpg" alt="">
             <div class="info-cat">
                 <p class="name-categoria">Accesorios</p>
                 <p class="cant-productos-categoria">71 productos</p>
@@ -248,7 +248,7 @@
         </div>
 
         <div class="categoria">
-            <img src="/img/categorias/categoria5.jpg" alt="">
+            <img src="./img/categorias/categoria5.jpg" alt="">
             <div class="info-cat">
                 <p class="name-categoria">Accesorios</p>
                 <p class="cant-productos-categoria">71 productos</p>
@@ -256,7 +256,7 @@
         </div>
 
         <div class="categoria">
-            <img src="/img/categorias/categoria6.jpg" alt="">
+            <img src="./img/categorias/categoria6.jpg" alt="">
             <div class="info-cat">
                 <p class="name-categoria">Accesorios</p>
                 <p class="cant-productos-categoria">71 productos</p>
@@ -264,7 +264,7 @@
         </div>
 
         <div class="categoria">
-            <img src="/img/categorias/categoria7.jpg" alt="">
+            <img src="./img/categorias/categoria7.jpg" alt="">
             <div class="info-cat">
                 <p class="name-categoria">Accesorios</p>
                 <p class="cant-productos-categoria">71 productos</p>
@@ -272,7 +272,7 @@
         </div>
 
         <div class="categoria">
-            <img src="/img/categorias/categoria8.jpg" alt="">
+            <img src="./img/categorias/categoria8.jpg" alt="">
             <div class="info-cat">
                 <p class="name-categoria">Accesorios</p>
                 <p class="cant-productos-categoria">71 productos</p>
@@ -280,7 +280,7 @@
         </div>
 
         <div class="categoria">
-            <img src="/img/categorias/categoria9.jpg" alt="">
+            <img src="./img/categorias/categoria9.jpg" alt="">
             <div class="info-cat">
                 <p class="name-categoria">Accesorios</p>
                 <p class="cant-productos-categoria">71 productos</p>
@@ -288,7 +288,7 @@
         </div>
 
         <div class="categoria">
-            <img src="/img/categorias/categoria10.jpg" alt="">
+            <img src="./img/categorias/categoria10.jpg" alt="">
             <div class="info-cat">
                 <p class="name-categoria">Accesorios</p>
                 <p class="cant-productos-categoria">71 productos</p>
@@ -297,11 +297,11 @@
     </div>
 
     <footer>
-        <img src="img/footer-original.png" alt="">
+        <img src="./img/footer-original.png" alt="">
     </footer>
 
-    <script src="/js/carrusel-catalogos.js"></script>
-    <script src="/js/carrusel-productos-nuevos.js"></script>
-    <script src="/js/categorias-logica.js"></script>
+    <script src="./js/carrusel-catalogos.js"></script>
+    <script src="./js/carrusel-productos-nuevos.js"></script>
+    <script src="./js/categorias-logica.js"></script>
 </body>
 </html>
